--- a/train_decoder.ipynb
+++ b/train_decoder.ipynb
@@ -485,6 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## plot MSE loss of training and validation dataset\n",
     "plt.figure(figsize=(21, 9))\n",
     "plt.plot(train_loss_list, '-o', label='train')\n",
     "plt.plot(valid_loss_list, '-o', label='valid')\n",
